fixed select v align.

--- a/src/select.less
+++ b/src/select.less
@@ -10,6 +10,7 @@
     display: inline-block;
     .box-sizing(border-box);
     height: @esf-form-select-height;
+    vertical-align: middle;
     .esf-border-radius(
         @esf-form-select-border-radius,
         @esf-form-select-border-radius
